--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.0",
+    "@dicebear/collection": "^9.2.3",
+    "@dicebear/core": "^9.2.3",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@uiw/react-codemirror": "^4.23.14",
