--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.0",
     "framer-motion": "^12.19.2",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "openai": "^5.8.2",
