--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "PORT=3020 next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -30,8 +30,10 @@
     "next": "15.3.4",
     "openai": "^5.8.2",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-loader-spinner": "^6.1.6",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
