--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@dicebear/collection": "^9.2.3",
     "@dicebear/core": "^9.2.3",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@uiw/react-codemirror": "^4.23.14",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "convex": "^1.25.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "jotai": "^2.12.5",
     "lucide-react": "^0.525.0",
