--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
