--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@uiw/react-codemirror": "^4.23.14",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +30,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.0",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.19.2",
     "jotai": "^2.12.5",
     "lucide-react": "^0.525.0",
@@ -40,6 +43,7 @@
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
