--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "jotai": "^2.12.5",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-loader-spinner": "^6.1.6",
     "react-use": "^17.6.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
